# DiscordGameLoginNotifier

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  example.env  pyproject.toml  rcon-cli  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: docker-image.yml
discord-game-login-notifier/: main.py
palworld-server-player-logger/: main.py
sav_filename_logger/: main.py
test-docker/: build.sh  docker-compose.yml  test.sh
test-docker/sub.d/: 0001-maintenance.inc.sh  0002-toolkit.inc.sh
