[tool.poetry]
name = "DiscordGameLoginNotifier"
version = "0.1.0"
description = ""
authors = ["Mizunanari"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mcrcon = "^0.7.0"
requests = "^2.31.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
