[tool.poetry]
name = "DiscordGameLoginNotifier"
version = "0.1.0"
description = ""
authors = ["Mizunanari"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
mcrcon = {git = "https://github.com/Mizunanari/PalRcon.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
